--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test-once": "tsc && karma start karma.conf.js --single-run",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
+	"lessc": "lessc",
     "webdriver:update": "webdriver-manager update"
   },
   "keywords": [],
@@ -34,24 +35,23 @@
     "@angular/platform-browser-dynamic": "~2.1.1",
     "@angular/router": "~3.1.1",
     "@angular/upgrade": "~2.1.1",
-
     "angular-in-memory-web-api": "~0.1.13",
     "bootstrap": "^3.3.7",
-    "systemjs": "0.19.39",
     "core-js": "^2.4.1",
+    "materialize-css": "^0.97.7",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
+    "systemjs": "0.19.39",
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
-    "concurrently": "^3.1.0",
-    "lite-server": "^2.2.2",
-    "typescript": "^2.0.3",
-
+    "@types/core-js": "^0.9.34",
+    "@types/jasmine": "^2.5.35",
+    "@types/node": "^6.0.45",
+    "@types/selenium-webdriver": "^2.53.32",
     "canonical-path": "0.0.2",
+    "concurrently": "^3.1.0",
     "http-server": "^0.9.0",
-    "tslint": "^3.15.1",
-    "lodash": "^4.16.2",
     "jasmine-core": "~2.5.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -59,14 +59,14 @@
     "karma-htmlfile-reporter": "^0.3.4",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "less": "^2.7.1",
+    "lite-server": "^2.2.2",
+    "lodash": "^4.16.2",
     "protractor": "4.0.9",
-    "webdriver-manager": "10.2.5",
     "rimraf": "^2.5.4",
-
-    "@types/core-js": "^0.9.34",
-    "@types/node": "^6.0.45",
-    "@types/jasmine": "^2.5.35",
-    "@types/selenium-webdriver": "^2.53.32"
+    "tslint": "^3.15.1",
+    "typescript": "^2.0.3",
+    "webdriver-manager": "10.2.5"
   },
   "repository": {}
 }
