--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "dragula": "^3.7.2",
+    "less": "^2.7.1",
     "materialize-css": "^0.97.7",
     "ng2-dragula": "^1.2.1",
     "reflect-metadata": "^0.1.8",
