--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/router": "~3.1.1",
     "@angular/upgrade": "~2.1.1",
     "angular-in-memory-web-api": "~0.1.13",
+    "angular2-cookie": "^1.2.5",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "dragula": "^3.7.2",
