Update SQLGen to reflect changes to CoursesTaken, CoursesPlanToTake

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ server/pony_models.pyc
 server/__pycache__/
 .DS_Store
 server/websiteDatabase.db
+Database/.ipynb_checkpoints/SQLGen-checkpoint.ipynb
